force-app/main/default/objects/JBCXM__PageInfo__c/JBCXM__PageInfo__c.object-meta.xml
<CustomObject>
    <description>To maintain page level information</description>
    <label>PageInfo</label>
    <nameField>
        <label>PageInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>