force-app/main/default/objects/JBCXM__PageInfo__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores display order of a page specific to survey</description>
    <inlineHelpText>Stores display order of a page specific to survey</inlineHelpText>
    <label>Page display order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>