force-app/main/default/objects/JBCXM__PageInfo__c/fields/JBCXM__MetaData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MetaData__c</fullName>
    <description>Meta Data</description>
    <label>MetaData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>