force-app/main/default/objects/JBCXM__PageInfo__c/fields/JBCXM__Survey__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on survey</description>
    <label>Survey</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>PageInfo</relationshipLabel>
    <relationshipName>PageInfo</relationshipName>
    <type>Lookup</type>
</CustomField>